<resources>
    <string name="app_name">Note App</string>
    <string name="note_app">Note App</string>
    <string name="e_mail">E-mail</string>
    <string name="welcome">Welcome!</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="go_to_login">Go to login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>
    <string name="notes">Notes</string>
    <string name="add_new_note">Add New Note</string>
    <string name="delete">Delete</string>
</resources>