<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="16dp"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/welcomeText">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/welcomeText"
        android:id="@+id/createAccountLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:id="@+id/emailEditText">

        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:id="@+id/passwordEditText">

        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:id="@+id/passwordConfirmEditText">

        </EditText>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/create_account"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:id="@+id/createAccountButton"
            android:backgroundTint="@color/my_primary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccountLayout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_login"
            android:textStyle="bold"
            android:id="@+id/loginTextViewButton"
            android:layout_margin="8dp"/>

    </LinearLayout>

</RelativeLayout>