<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="16dp"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/welcomeTextLogin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome Back!"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/welcomeTextLogin"
        android:id="@+id/loginLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:id="@+id/emailEditTextLogin">

        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:id="@+id/passwordEditTextLogin">

        </EditText>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:id="@+id/loginButton"
            android:backgroundTint="@color/my_primary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginLayout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:id="@+id/loginTextViewButton"
            android:layout_margin="8dp"/>

    </LinearLayout>

</RelativeLayout>